--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -64,7 +64,7 @@ custom_css: "/css/sponsorship.css"
     <h3>次回イベントの概要</h3>
     <ul>
       <li>開催日時: 2025年9月27日(土)〜28日（日）</li>
-      <li>開催場所: 滝沢市近郊</li>
+      <li>開催場所: 滝沢市IPU第2イノベーションセンター</li>
       <li>地域と人がゆるやかにつながる仕組みをつくる</li>
     </ul>
     <h3>これまでの開催実績</h3>
